fixed clipping issues

--- a/src/App.css
+++ b/src/App.css
@@ -66,9 +66,11 @@ header {
 
 .column.skills {
   flex: 1;
-  padding: 20px;
+  padding: 25px;
+  padding-right: 55px;
   border: 2px solid #ccc;
   margin: 10px;
+  margin-right: 0px;
 }
 
 .contact-section {
@@ -97,6 +99,8 @@ header {
   width: 100%;
   margin-bottom: 20px;
 }
+
+
 
 @media screen and (min-width: 768px) {
   .skill-row {
@@ -182,4 +186,13 @@ header {
 .link {
   color: rgb(9, 225, 52);
   text-decoration: underline;
+}
+
+@media only screen and (max-width: 768px) {
+  body {
+    font-size: 14px;
+  }
+  .column {
+    width: 100%;
+  }
 }
